--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
       <meta charset="utf-8">
       <title> Function Challenge </title>
       <link rel="stylesheet" href="style.css">
+      <script src="script.js"></script>
   </head>
 
   <body>
       <h1>Function Challenge</h1>
-      <p> dongers </p>
+      <p> Can't stop the rock. </p>
   </body>
 
 </html>
